--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,8 @@ img {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* ----------Модульное окно-------- */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -397,6 +399,179 @@ img {
 .no-scroll {
   overflow: hidden;
 }
+
+/* ------заполнение модульного окна------ */
+
+.modal-header {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.modal-form {
+  padding: 40px 39px 40px 41px;
+}
+
+.form-item {
+  display: block;
+  text-align: left;
+  margin-bottom: 30px;
+  list-style: none;
+}
+
+.form-li:not(:nth-last-child(-n + 2)) {
+  margin-bottom: 10px;
+}
+
+.form-li-text {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  display: flex;
+  margin-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.input-box {
+  display: flex;
+  position: relative;
+}
+
+.form-input {
+  display: flex;
+  padding-left: 42px;
+  width: 448px;
+  height: 40px;
+  color: #757575;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-input:focus,
+.form-input-text:focus {
+  outline-color: #2196f3;
+}
+
+.form-input:focus + .form-icon {
+  color: #2196f3;
+}
+
+.form-icon {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  align-items: center;
+  fill: currentColor;
+}
+
+.form-input-text {
+  display: flex;
+  margin-top: 4px;
+  /*margin-bottom: 20px;*/
+  padding: 12px 16px;
+  width: 448px;
+  height: 120px;
+  resize: none;
+  color: #757575;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox:checked ~ .form-checkbox-icon {
+  opacity: 1;
+}
+
+.checkbox:checked + .form-checkbox-border {
+  opacity: 0;
+}
+
+.form-checkbox-item {
+  display: inline-block;
+  position: relative;
+  width: 16px;
+  height: 15px;
+}
+
+.form-checkbox-border {
+  display: inline-block;
+  position: absolute;
+  left: 52px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  opacity: 1;
+}
+
+.form-checkbox-icon {
+  display: inline-block;
+  position: absolute;
+  left: 52px;
+  opacity: 0;
+}
+
+.form-checkbox-text {
+  margin-left: 8px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.link-terms {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+  text-decoration: underline;
+}
+
+.form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 55px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  border-style: hidden;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 
 /* -----------Главное меню портфолио --------*/
 
@@ -947,4 +1122,78 @@ position: relative;
   fill: var(--background-header-color);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+ /* ---Subscribe--- */
+
+.subscribe {
+  width: 570px;
+  margin-left: 93px;
+}
+
+.subscribe-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color:var(--background-header-color);
+}
+
+.subscribe-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.subscribe-input {
+  padding: 16px;
+  width: 358px;
+  height: 50px;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscribe-input:focus {
+  outline-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 28px;
+  margin-left: 12px;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-style: hidden;
+  color: var(--background-header-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-icon {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  fill: var(--background-header-color);
 }
