--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,11 @@ img {
   list-style: none;
 }
 
+.markup {
+  display: flex;
+  justify-content: center;
+}
+
 .form-li:not(:nth-last-child(-n + 2)) {
   margin-bottom: 10px;
 }
@@ -503,7 +508,6 @@ img {
 }
 
 .form-checkbox-text {
-  margin-left: 8px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
